// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCChoice Editor Node MCChoice component 1`] = `
<div
  className="component obojobo-draft--chunks--mc-assessment--mc-choice is-not-correct editor-mc-choice"
>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center correct-button"
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
    >
      ✖ Incorrect
    </button>
  </div>
  <div
    className="children"
  >
    <div />
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center add-feedback"
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
    >
      Add Feedback
    </button>
  </div>
</div>
`;

exports[`MCChoice Editor Node MCChoice component correct choice 1`] = `
<div
  className="component obojobo-draft--chunks--mc-assessment--mc-choice is-correct editor-mc-choice"
>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center delete-button"
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
    >
      ×
    </button>
  </div>
  <div
    className="obojobo-draft--components--button is-not-dangerous align-center correct-button"
  >
    <button
      className="button"
      contentEditable={false}
      onClick={[Function]}
    >
      ✔ Correct
    </button>
  </div>
  <div
    className="children"
  >
    <div />
  </div>
</div>
`;
